Fixed mainnav spacing and made progress on the breadcrums (still a bug to deal with...).

--- a/css/src/main_nav.css
+++ b/css/src/main_nav.css
@@ -8,7 +8,7 @@ ul#main_nav {
     padding:0;
     background:#FE7A2C url(../../img/mainnav/background.png) repeat-x;
     height:41px;
-    padding-left:222px;
+    padding-left:242px;
     }
 
 ul#main_nav li {
